@@ -49,7 +49,7 @@ from IPython.PyColorize import Parser
 from IPython.ipstruct import Struct
 from IPython.macro import Macro
 from IPython.genutils import *
-
+from IPython import platutils
 #***************************************************************************
 # Utility functions
 def on_off(tag):
@@ -2329,12 +2329,16 @@ Defaulting color scheme to 'NoColor'"""
         if ps:
             try:
                 os.chdir(os.path.expanduser(ps))
+                ttitle = ("IPy:" + (
+                    os.getcwd() == '/' and '/' or os.path.basename(os.getcwd())))
+                platutils.set_term_title(ttitle)
             except OSError:
                 print sys.exc_info()[1]
             else:
                 self.shell.user_ns['_dh'].append(os.getcwd())
         else:
             os.chdir(self.shell.home_dir)
+            platutils.set_term_title("IPy:~")
             self.shell.user_ns['_dh'].append(os.getcwd())
         if not 'q' in opts:
             print self.shell.user_ns['_dh'][-1]
